--- a/css/training.css
+++ b/css/training.css
@@ -413,3 +413,17 @@ hr{
     font-size: 20px!important;
     font-weight: 600!important;
 }
+
+.buttom-faq{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tweet p{
+    background-color: #e7332b;
+    color: #fff;
+    padding: 8px 25px;
+    border-radius: 18px;
+    cursor: pointer;
+}
